@@ -1,3 +1,7 @@
+2012-08-16  6.7.9-1 Cristy  <quetzlzacatenango@image...>
+  * Adjust scaling for Luv colorspace conversion (reference
+    http://www.imagemagick.org/discourse-server/viewtopic.php?f=3&t=21664).
+
 2012-08-15  6.7.9-0 Cristy  <quetzlzacatenango@image...>
   * New version 6.7.8-9, SVN revision 8970.
 
